# dbus-broker

./: CMakeLists.txt  CMakeSettings.json  README.md
dep/c-dvar/src/: c-dvar-reader.c
dep/c-rbtree/src/: c-rbtree.c  c-rbtree.h
dep/c-stdaux/src/: c-stdaux.h
dep/c-utf8/src/: c-utf8.c
mini/: bus-message.c  escape.c  fd-util.c  fileio.c  fs-util.c  hashmap.c  locale-util.c  log.c  p99_args.h  p99_generated.h  p99_paste.h  path-util.c  process-util.c  randombytes.c  randombytes.h  sd-bus.c  sd-event.c  socket-util.c  string-util.c  strv.c  tests.c  time-util.c  user-util.c
src/broker/: broker.c  broker.h  controller-dbus.c  main.c
src/bus/: bus.c  bus.h  driver.c  listener.c  match.h  name.c  name.h  peer.c  peer.h  policy.c  policy.h
src/dbus/: connection.c  message.c  message.h  protocol.h  sasl.c  socket.c  test-socket.c
src/util/: apparmor.c  audit-fallback.c  dirwatch.c  dispatch.c  error.c  fdlist.c  fdlist.h  log.c  log.h  metrics.c  misc.c  proc.c  ref.h  selinux.c  sockopt.c  syscall.h  test-dispatch-win.c  test-dispatch.c  user.c  user.h
systemd/src/basic/: af-from-name.gperf  af-from-name.h  af-list.txt  af-to-name.h  alloc-util.c  alloc-util.h  arphrd-from-name.gperf  arphrd-from-name.h  arphrd-list.txt  arphrd-to-name.h  audit-util.h  cap-from-name.gperf  cap-from-name.h  cap-list.txt  cap-to-name.h  capability-util.h  cgroup-util.h  env-util.h  errno-from-name.gperf  errno-from-name.h  errno-list.txt  errno-util.h  escape.h  ether-addr-util.h  fd-util.c  fd-util.h  fileio.h  filesystems-gperf.h  format-util.h  fs-util.h  glob-util.h  glyph-util.c  gunicode.c  hashmap.h  hexdecoct.c  hexdecoct.h  hmac.c  hmac.h  in-addr-util.h  inotify-util.h  (+45 more)
systemd/src/basic/linux/: if_ether.h  netlink.h
systemd/src/busctl/: busctl-introspect.c  test-busctl-introspect.c
systemd/src/fundamental/: macro-fundamental.h  sha256.c  string-util-fundamental.c  string-util-fundamental.h
systemd/src/libsystemd/sd-bus/: bus-control.c  bus-convenience.c  bus-creds.c  bus-dump.c  bus-error.c  bus-gvariant.c  bus-internal.c  bus-internal.h  bus-introspect.c  bus-introspect.h  bus-kernel.c  bus-match.c  bus-message.c  bus-objects.c  bus-protocol.h  bus-slot.c  bus-socket.c  bus-track.c  sd-bus.c  test-bus-marshal.c  test-bus-server.c
systemd/src/libsystemd/sd-daemon/: sd-daemon.c
systemd/src/libsystemd/sd-event/: event-source.h  sd-event.c
systemd/src/libsystemd/sd-id128/: id128-util.c  sd-id128.c
systemd/src/shared/: bus-object.c  bus-print-properties.c  pager.c  spawn-ask-password-agent.c  tests.c  tests.h  varlink.c  xml.c
systemd/src/systemd/: _sd-common.h  sd-bus-vtable.h  sd-bus.h
test/: sd-event-udp.c  tcp-echo.c  uv-bus.cpp
test/dbus/: dbus-launch-win.c  dbus-launch.c  test-broker-win.c  test-broker.c  util-broker-win.c  util-broker.c  util-broker.h
windows/: asprintf.c  asprintf.h  compat.c  dump_wsaprotocol_info.c  getopt.c  getopt.h  getopt_long.c  getuid.cpp  machine-guid.c  mmap.c  poll.c  posix.c  posix.h  socket.c  strndup.c  typeof.h  win_clock_gettime.c  win_clock_gettime.h  wsock_trace_x64.lib
windows/posix/include/: __builtin.h  byteswap.h  dirent.h  endian.h  poll.h  sched.h  stdatomic.h  syslog.h  unistd.h
windows/posix/include/asm/: types.h
windows/posix/include/sys/: inotify.h  mman.h  resource.h  shm.h  signalfd.h  socket.h  statfs.h  uio.h  wait.h
windows/wepoll/: getuid.cpp  readshm.cpp  wepoll.c  wepoll.h
